<resources>
    <string name="app_name">Whatareyoudoing</string>
    <string name="what_are_you_doing">What are you doing?</string>
    <string name="what_are_you_feeling">what are you feeling?</string>
    <string name="congratulations">Congratulations</string>
    <string name="home">home</string>
    <string name="total">Total</string>
    <string name="people_are_also">people are also</string>
    <string name="activity">activity</string>
    <string name="doinglisttext">SHOW DIALOG</string>
</resources>